Added citations and glossary entries

--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -6,7 +6,6 @@ The most significant part of assembling each prototype was soldering the \gls{lg
 
 During the debugging of the final revision of the PCB there was a case of note. While soldering a new LSM6DSL to the board, we discovered a technique to consistently get good soldering results. Assuming that the board has already been stenciled and baked, there should be fresh solder on the pads. Apply generously with flux (better too much than too little) to clean the area and help flow. Using a hot-air station, preheat the board slowly from below for circa a minute and preheat the component towards the end (just flip the board and continue heating from the top while holding the component in the air flow). This prevents the solder from setting fast and making the soldering harder. When the solder visibly melts, place the package on the pads carefully and lightly push the component flat against the board. This forces any residual dirt away from the pads, and the extended footprints control where the displaced solder goes to avoid shorts. When the component has been released, lightly push it from the side. If the component springs back from surface tension it is a good chance that it has been soldered correctly, provided the component was pushed down before. 
 
-In terms of future work, most likely the first thing should be wind direction and/or intensity sensing. Because the direction of the wind has such a significant impact on the performance of the boat. It could possibly be implemented as a rotary encoder, or it might be possible to implement it through a forced-convection sensor%\cite{wind_meas}.
-. Other things that could be interesting to measure would the either the state of the rudder or sail, although the latter one especially would probably be a significant task, there is the consideration of what the final scope of the product should be; if it should actually compete as an extensive set with all features the sailor could want or if it should try to go for the lower end of products and do that very well instead. 
+In terms of future work, most likely the first thing should be wind direction and/or intensity sensing. Because the direction of the wind has such a significant impact on the performance of the boat. It could possibly be implemented as a rotary encoder, or it might be possible to implement it through a forced-convection sensor\cite{wind_meas}. Other things that could be interesting to measure would the either the state of the rudder or sail, although the latter one especially would probably be a significant task, there is the consideration of what the final scope of the product should be; if it should actually compete as an extensive set with all features the sailor could want or if it should try to go for the lower end of products and do that very well instead. 
 
-% TODO: add citation wind_meas to ltu.diva-portal.org/smash/get/diva2:1039147/FULLTEXT01.pdf
+% TODO (done?): add citation wind_meas to ltu.diva-portal.org/smash/get/diva2:1039147/FULLTEXT01.pdf
