--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -384,3 +384,17 @@ first={Strapdown Inertial Navigation System (SINS)\glsadd{sinsg}}, see=[Glossary
 \newglossaryentry{dcm}{type=\acronymtype, name={DCM}, 
 description={Direction Cosine Matrix}, 
 first={Direction Cosine Matrix (DCM)\glsadd{dcmg}}, see=[Glossary:]{dcmg}}
+
+%%% LGA
+\newglossaryentry{lgag}{name={LGA},
+    description={Land Grid Array (LGA)}}
+\newglossaryentry{lga}{type=\acronymtype, name={LGA}, 
+description={Land Grid Array}, 
+first={Land Grid Array (LGA)\glsadd{lgag}}, see=[Glossary:]{lgag}}
+
+%%% SMD
+\newglossaryentry{smdg}{name={SMD},
+    description={Surface Mount Device (SMD)}}
+\newglossaryentry{smd}{type=\acronymtype, name={smd}, 
+description={Surface Mount Device}, 
+first={Surface Mount Device (SMD)\glsadd{smdg}}, see=[Glossary:]{smdg}}
