--- a/report/references.tex
+++ b/report/references.tex
@@ -5,6 +5,8 @@
 % Reference to casing cad software missing
 \bibitem{cad}
 https://www.autodesk.com/products/fusion-360/overview
+\bibitem{wind_meas}
+	\url{ltu.diva-portal.org/smash/get/diva2:1039147/FULLTEXT01.pdf}
 \bibitem{bqStudio}
 Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
 \bibitem{stm32cubemx}
