--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -53,7 +53,7 @@ In the second prototype load cells, which are sensors that utilizes strain gauge
 
 
 \subsubsection{Sensor}
-The force from the board on the mounting plate will be considerably large. The actual force is something that is not known for sure. The initial assumption was that a load cell with a $90.75kg$ force range should be enough. If the sensor will be maxed out, the cell its rated for a $150\%$ overload without causing some damage to the sensor. 
+The force from the board on the mounting plate will be considerably large. The actual force is something that is not known for sure. The initial assumption was that a load cell with a $90.75~\textrm{kg}$ force range should be enough. If the sensor will be maxed out, the cell its rated for a $150\%$ overload without causing some damage to the sensor. 
 
 The chosen sensor for this application is the compression load cell called \emph{FX1901}. 
 From the datasheet\cite{load_cell}, the voltage readings of this part could be calculated. The maximum voltage difference is calculated to be around $180mV$, see \autoref{Load_cell}.
