--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -70,7 +70,9 @@
 \end{figure}
 
 \clearpage
-\section{Bill of Materials}
+\section{Lists}
+\subsection{Bill of Materials: Main \gls{pcb}}
+\begin{center}
 \begin{tabular}{|l|l|c|}
 	\hline
 	\bf{Main Board Components} & \bf{Package} & \bf{Quantity} \\
@@ -147,7 +149,7 @@
 	\hline
 	Green LED & ø2.5mm 100mil pitch& 1 \\
 	\hline
-	\emph{Misc:} & & \\
+	\emph{Others:} & & \\
 	\hline
 	Tactile SMD Button & & 2 \\
 	\hline
@@ -162,7 +164,11 @@
 	Pin Jumper & & 2 \\
 	\hline
 \end{tabular}
+\end{center}
 
+\clearpage
+\subsection{Bill of Materials: Battery Management \gls{pcb}}
+%\begin{center}
 \begin{tabular}{|l|l|c|}
 	\hline
 	\bf{Battery Management Circuit} & \bf{Package} & \bf{Quantity} \\
@@ -260,6 +266,7 @@
 	Power P-MOS & SOT-23 & 1 \\
 	\hline
 \end{tabular}
+%\end{center}
 
 %Image of circuit board(s) are sectionlocals labled as "fig:pcbr*"
 
