--- a/report/tmp_hw_choice_of_components_kenny.tex
+++ b/report/tmp_hw_choice_of_components_kenny.tex
@@ -1,16 +1,16 @@
-In order to choose what components would be used for the system, the first consideration was the central controller of the system. Because the system was designed to work in conjunction with an app on a smartphone it was agreed that there is no need for heavy computation on the on-board module. This meant that a \gls{mcu} would be sufficient. Because several of the project members had previous experience with the \gls{st} brand STM32F411RE and it has a significant number of GPIO ports, useful peripherals (\gls{i2c}, \gls{spi}, timers, etc) and a high clock speed of up to $100MHz$ it was chosen as the core of the on-board module. 
+In order to choose what components would be used for the system, the first consideration was the central controller of the system. Because the system was designed to work in conjunction with an app on a smartphone it was agreed that there is no need for heavy computation on the on-board module. This meant that a \gls{mcu} would be sufficient. Because several of the project members had previous experience with the \gls{st} brand \emph{STM32F411RE} and it has a significant number of GPIO ports, useful peripherals (\gls{i2c}, \gls{spi}, timers, etc) and a high clock speed of up to $100MHz$ it was chosen as the core of the on-board module. 
 
-The STM32F411RE utilizes the \gls{swd} protocol for programming and debugging, the programmer in this case being the programming section of a NUCLEO-F411RE development board configured as a programmer. The \gls{swd} header also provides a \gls{uart} channel to communicate with the \gls{mcu}. However, in the interest of convenience for the developers a FT232RL chip was added. The FT232RL is a \gls{usb}-to-\gls{uart} converter that also allows for the \gls{usb} to act as a power source for the board. This eliminated the need for the prototypes to be connected to a power supply and the programmer at times when they were not necessary, giving the more convenient alternative of a common \gls{usb} cable.  The FT232RL was configured only to provide the communication conversion and the power. There are more features available to the FT232RL but no use was found as the on-board module is not connected to a \gls{usb} port for the majority of its operation. 
+The \emph{STM32F411RE} utilizes the \gls{swd} protocol for programming and debugging, the programmer in this case being the programming section of a \emph{NUCLEO-F411RE} development board configured as a programmer. The \gls{swd} header also provides a \gls{uart} channel to communicate with the \gls{mcu}. However, in the interest of convenience for the developers a \emph{FT232RL} chip was added. The \emph{FT232RL} is a \emph{\gls{usb}-to-\gls{uart}} converter that also allows for the \gls{usb} to act as a power source for the board. This eliminated the need for the prototypes to be connected to a power supply and the programmer at times when they were not necessary, giving the more convenient alternative of a common \gls{usb} cable.  The FT232RL was configured only to provide the communication conversion and the power. There are more features available to the FT232RL but no use was found as the on-board module is not connected to a \gls{usb} port for the majority of its operation. 
 
-In order to communicate with the smartphone in a convenient way the on-board module used a Bluetooth module, the SPBTLE-RF. It was chosen as a compact complete module, eliminating the need for soldering inconvenient components and designing \gls{pcb} antennas, and because ST Microelectronics provide official libraries for the STM32F411RE-to-SPBTLE-RF interface. 
+In order to communicate with the smartphone in a convenient way the on-board module used a Bluetooth module, the SPBTLE-RF. It was chosen as a compact complete module, eliminating the need for soldering inconvenient components and designing \gls{pcb} antennas, and because ST Microelectronics provide official libraries for the \emph{STM32F411RE-to-SPBTLE-RF} interface. 
 
-One of the primary functions that the system had to provide was velocity. The velocity is derived from the position of the boat as measured with \gls{gps}. This necessitated a \gls{gps} module. The project group from the previous year had thought the same thing, and among the remains of their project was a A2235-H module. The A2235-H module fit the requirements of the project, as it provided circa 1Hz update rate with sub-meter precision in reasonable conditions, all within a compact form factor. It did however have some requirements on how it could be initialized, otherwise risking corruption of the \gls{gps} modules firmware. 
+One of the primary functions that the system had to provide was velocity. The velocity is derived from the position of the boat as measured with \gls{gps}. This necessitated a \gls{gps} module. The project group from the previous year had thought the same thing, and among the remains of their project was a \emph{A2235-H} module. The \emph{A2235-H} module fit the requirements of the project, as it provided circa 1Hz update rate with sub-meter precision in reasonable conditions, all within a compact form factor. It did however have some requirements on how it could be initialized, otherwise risking corruption of the \gls{gps} modules firmware. 
 
-The second primary function the board was supposed to provide was the ability to tell the boats orientation. The common Madgwick method discussed later relies on the use of an accelerometer, magnetometer and gyroscope in conjunction. Because the \gls{mcu} had already been decided we looked for compatible development boards that had the required components and ideally also support libraries. Having found the NUCLEO-1KS01A2 that satisfies this, the components were chosen from the development board to be able to reuse already written code. 
+The second primary function the board was supposed to provide was the ability to tell the boats orientation. The common Madgwick method discussed later relies on the use of an accelerometer, magnetometer and gyroscope in conjunction. Because the \gls{mcu} had already been decided we looked for compatible development boards that had the required components and ideally also support libraries. Having found the \emph{NUCLEO-1KS01A2} that satisfies this, the components were chosen from the development board to be able to reuse already written code. 
 
-For magnetometer, the LSM303AGR was what was on the development board. It incorporates both an accelerometer and a magnetometer and testing the development board showed it performed good enough for the intended purpose. For the gyroscope, the LSM6DSL had once again proved good enough for our purpose, and it too incorporated an accelerometer, possibly allowing for additional filtering possibilities in the future. 
+For magnetometer, the \emph{LSM303AGR} was what was on the development board. It incorporates both an accelerometer and a magnetometer and testing the development board showed it performed good enough for the intended purpose. For the gyroscope, the \emph{LSM6DSL} had once again proved good enough for our purpose, and it too incorporated an accelerometer, possibly allowing for additional filtering possibilities in the future. 
 
-During the course of the project we considered two changes to the choice of components. One was to change from the LSM303AGR to the LSM303C because of apparent lack of availability, but we found another place to get the already chosen part. The second change we considered was to replace the LSM6DSL and LSM303AGR with the LSM9DS1, which incorporates the magnetometer, accelerometer and gyroscope in a single package to minimize the need to solder inconvenient packages, but because we could not find any official libraries we decided to not change over, so as to not have to rewrite the entire library by ourselves. 
+During the course of the project we considered two changes to the choice of components. One was to change from the \emph{LSM303AGR} to the \emph{LSM303C} because of apparent lack of availability, but we found another place to get the already chosen part. The second change we considered was to replace the \emph{LSM6DSL} and \emph{LSM303AGR} with the \emph{LSM9DS1}, which incorporates the magnetometer, accelerometer and gyroscope in a single package to minimize the need to solder inconvenient packages, but because we could not find any official libraries we decided to not change over, so as to not have to rewrite the entire library by ourselves. 
 
-In addition to the \gls{imu} sensors, the development board also provided two additional sensors: the HTS221 thermometer and relative humidity sensor, and the LPS22HB pressure sensor. These were included in the final design to give room for expansion. 
+In addition to the \gls{imu} sensors, the development board also provided two additional sensors: the \emph{HTS221}thermometer and relative humidity sensor, and the \emph{LPS22HB} pressure sensor. These were included in the final design to give room for expansion. 
 
