--- a/report/main.tex
+++ b/report/main.tex
@@ -3,6 +3,7 @@
 % text
 \usepackage[utf8]{inputenc}
 \usepackage[numbers]{natbib}
+%\bibliographystyle{unsrtnat}
 \usepackage{lipsum}
 \usepackage[toc,page]{appendix}
 \usepackage{amssymb,amsmath}
