--- a/report/references.tex
+++ b/report/references.tex
@@ -1,144 +1,118 @@
-\begin{thebibliography}{9}
+\begin{thebibliography}{99}
 \label{sec:ref}
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
-% Reference to casing cad software missing
+%%% BLANK LINKS
 \bibitem{cad}
-https://www.autodesk.com/products/fusion-360/overview
+	\url{https://www.autodesk.com/products/fusion-360/overview}
 \bibitem{wind_meas}
 	\url{ltu.diva-portal.org/smash/get/diva2:1039147/FULLTEXT01.pdf}
-\bibitem{bqStudio}
-Battery Management Studio (bqStudio) offers a full suite of robust tools to assist with the process of evaluating, designing with, configuring, testing, or otherwise utilizing TI Battery management products. \url{http://www.ti.com/tool/bqstudio}
 \bibitem{stm32cubemx}
-  \url{http://www.st.com/en/development-tools/stm32cubemx.html}
+	\url{http://www.st.com/en/development-tools/stm32cubemx.html}
 \bibitem{kicad}
-  KiCad open source electronics design,
-  \url{kicad-pcb.org/}
-\bibitem{overprotection}
-	Overvoltage and Reverce-voltage Protection in Automotive Systems,
-	Application note 760, \emph{Maxim integrated}, Apr 02, 2002, 
-	\url{https://www.maximintegrated.com/en/app-notes/index.mvp/id/760}
+	KiCad open source electronics design,
+	\url{kicad-pcb.org/}
 \bibitem{x-cube-ble1}
-  \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
+	\url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
-  \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
+	\url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
 \bibitem{bluenrg-app}
-  \url{http://play.google.com/store/apps/details?id=com.st.blunrg}
+	\url{http://play.google.com/store/apps/details?id=com.st.blunrg}
 \bibitem{x-nucleo-idb05a1}
-  \url{http://www.st.com/en/ecosystems/x-nucleo-idb05a1.html}
+	\url{http://www.st.com/en/ecosystems/x-nucleo-idb05a1.html}
 \bibitem{x-nucleo-iks01a2}
-  \url{http://www.st.com/en/ecosystems/x-nucleo-iks01a2.html}
+	\url{http://www.st.com/en/ecosystems/x-nucleo-iks01a2.html}
 \bibitem{madgwick}
-  \url{http://x-io.co.uk/open-source-imu-and-ahrs-algorithms}
+	\url{http://x-io.co.uk/open-source-imu-and-ahrs-algorithms}
 \bibitem{madgwick-report}
-  \url{http://x-io.co.uk/res/doc/madgwick_internal_report.pdf}
+	\url{http://x-io.co.uk/res/doc/madgwick_internal_report.pdf}
 \bibitem{gps}
-  \url{http://update.maestro-wireless.com/GNSS/A2235-H/Maestro_GPS_Evaluation_Kit_EVA2235_H_User_Manual_V01.pdf}
+	\url{http://update.maestro-wireless.com/GNSS/A2235-H/Maestro_GPS_Evaluation_Kit_EVA2235_H_User_Manual_V01.pdf}
 \bibitem{libnmea}
-  \url{http://github.com/jacketizer/libnmea}
+	\url{http://github.com/jacketizer/libnmea}
 \bibitem{x-cube-53l0a}
-  \url{http://www.st.com/content/st_com/en/products/ecosystems/stm32-open-development-environment/stm32-nucleo-expansion-boards/stm32-ode-sense-hw/x-nucleo-53l0a1.html}
+	\url{http://www.st.com/content/st_com/en/products/ecosystems/stm32-open-development-environment/stm32-nucleo-expansion-boards/stm32-ode-sense-hw/x-nucleo-53l0a1.html}
 \bibitem{android-service}
-  \url{https://developer.android.com/reference/android/app/Service.html}
+	\url{https://developer.android.com/reference/android/app/Service.html}
 \bibitem{lat-long-calc}
-  \url{https://www.movable-type.co.uk/scripts/latlong.html}
-\bibitem{lm1117}
-	KiCad library entry for voltage regulator component lm1117 by \emph{ObKo}, 2012  
-  \url{https://github.com/ObKo/kicad-libraries/blob/master/libraries/lm1117.lib}
-\bibitem{llc}
-	Bi-directional Logic Level Converter, \emph{Sparkfun}, Aug 4, 1997,
-	\url{https://cdn.sparkfun.com/tutorialimages/BD-LogicLevelConverter/an97055.pdf}
-\bibitem{ftdi}
-	KiCad library entry for USBtoSerial component FT232RL by \emph{jbaker0428}, Oct 3, 2010
-	\url{https://github.com/jbaker0428/Kicad-Libraries/blob/master/library/ftdi.lib}
+	\url{https://www.movable-type.co.uk/scripts/latlong.html}
 \bibitem{rhumb-line}
-  \url{https://en.wikipedia.org/wiki/Rhumb_line}
+	\url{https://en.wikipedia.org/wiki/Rhumb_line}
 \bibitem{equirectangular}
-  \url{https://en.wikipedia.org/wiki/Equirectangular_projection}
+	\url{https://en.wikipedia.org/wiki/Equirectangular_projection}
 \bibitem{haversine}
-  \url{https://en.wikipedia.org/wiki/Haversine_formula}
+	\url{https://en.wikipedia.org/wiki/Haversine_formula}
 \bibitem{sailing}
-  \url{https://en.wikipedia.org/wiki/Sailing}
+	\url{https://en.wikipedia.org/wiki/Sailing}
 \bibitem{sail-force}
-  \url{http://newt.phys.unsw.edu.au/~jw/sailing.html}
+	\url{http://newt.phys.unsw.edu.au/~jw/sailing.html}
 \bibitem{volvo}
-  \url{https://sv.wikipedia.org/wiki/Volvo_Amazon}
+	\url{https://sv.wikipedia.org/wiki/Volvo_Amazon}
 \bibitem{png}
-  \url{https://sv.wikipedia.org/wiki/PNG}
+	\url{https://sv.wikipedia.org/wiki/PNG}
 \bibitem{activity}
-  \url{https://developer.android.com/reference/android/app/Activity.html}
+	\url{https://developer.android.com/reference/android/app/Activity.html}
 \bibitem{uml}
-  \url{https://en.wikipedia.org/wiki/Unified_Modeling_Language}
+	\url{https://en.wikipedia.org/wiki/Unified_Modeling_Language}
 \bibitem{gl}
-  \url{https://developer.android.com/reference/android/opengl/GLSurfaceView.html}
+	\url{https://developer.android.com/reference/android/opengl/GLSurfaceView.html}
 \bibitem{texttospeech}
-  \url{https://developer.android.com/reference/android/speech/tts/TextToSpeech.html}
+	\url{https://developer.android.com/reference/android/speech/tts/TextToSpeech.html}
 \bibitem{utter}
-  \url{https://developer.android.com/reference/android/speech/tts/UtteranceProgressListener.html}
+	\url{https://developer.android.com/reference/android/speech/tts/UtteranceProgressListener.html}
 \bibitem{gmaps}
-  \url{https://developers.google.com/maps/}
-\bibitem{Tof_cover}
-	\gls{st}, Spplication note: AN4907, \emph{VL53L0X ranging module cover window guidelines},
-	\url{http://www.st.com/content/ccc/resource/technical/document/application_note/group0/9d/93/be/33/13/be/46/19/DM00326504/files/DM00326504.pdf/jcr:content/translations/en.DM00326504.pdf}
-\bibitem{animal} 
-D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
-\textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
-
-\bibitem{boken} 
-B.R. Grover H. Patrick. Introduction to random signals and applied Kalman filtering. 1997
-\textit{BOKEN}. 
-
-\bibitem{SNAME} 
-Society of Naval Architects and Marine Engineers (SNAME), "Principles of Naval Architecture", 1989, Vol. III,
-\textit{SNAME}. 
-
- 
-\bibitem{nonlinear} 
-Dr. Oliver Nelles
-\\\texttt{nonlinear system identification.}
-
-\bibitem{kf eff}
-Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://doi.org/10.1007/s11123-016-0477-z}
-\bibitem{non-linear}
-Noureldin ., Karamat T.B., Georgy J. (2013)\texttt{ Basic Navigational Mathematics, Reference Frames and the Earth’s Geometry. In: Fundamentals of Inertial Navigation, Satellite-based Positioning and their Integration.} Springer, Berlin, Heidelberg
-\bibitem{cccv}
-	Power Guy, \emph{Constant Current Constant voltage}, May 26, 2016, San Diego, USA,
-  \url{https://www.us.tdk-lambda.com/media/292143/tdk-lambda-blog-052616.pdf}
+	\url{https://developers.google.com/maps/}
 \bibitem{UoC}
 	\url{https://edg.uchicago.edu/tutorials/load_cell/}
 \bibitem{load_cell}
 	\url{http://www.te.com/commerce/DocumentDelivery/DDEController?Action=srchrtrv&DocNm=FX19&DocType=DS&DocLang=English}
-\bibitem{animal}
-D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
-\textit{Proceedings of
-the}. IEEE, 85(1):6 –23, jan 1997
-
-\bibitem{signal_process}
-Probability and Random Processes with Applications to Signal Processing, 4/E (2012). 
-Henry Stark, John W Woods. Pearson Higher Education. 
-
-\bibitem{Discrete_kalman}
-	Donald E. Catlin, \emph{Estimation, Control, and the Discrete Kalman Filter}, 1989
 \bibitem{pertubation}
-  \url{https://en.wikipedia.org/wiki/Perturbation_theory}
-
-\bibitem{book}%[p.26-27]
-Weicker, P. (2014). \emph{A Systems Approach to Lithium-ion Battery Management}, Boston, Artech House. 
-
-%\bibitem{book}[p.111]
-%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111). Boston: Artech House. 
-
-%\bibitem{book}[p.111-112]
-%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.111-112). Boston: Artech House.
-
-%\bibitem{book}[p.183-185]
-%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.183-185). Boston: Artech House.
-
-%\bibitem{book}[p.35-38]
-%Weicker, P. (2014). A Systems Approach to Lithium-ion Battery Management. (pp.35-38). Boston: Artech House.
-
+	\url{https://en.wikipedia.org/wiki/Perturbation_theory}
 \bibitem{webpage}
-  \url{http://www.lygte-info.dk/info/battery%20protection%20UK.html}
-(pp. [Page number starts]-[ends]).
-
+	\url{http://www.lygte-info.dk/info/battery\%20protection\%20UK.html}
+%%% LINKS WITH DESCRIPTIONS
+\bibitem{lm1117}
+	KiCad library entry for voltage regulator component lm1117 by \emph{ObKo}, 2012,
+	\url{https://github.com/ObKo/kicad-libraries/blob/master/libraries/lm1117.lib}.
+\bibitem{llc}
+	Bi-directional Logic Level Converter, \emph{Sparkfun}, Aug 4, 1997,
+	\url{https://cdn.sparkfun.com/tutorialimages/BD-LogicLevelConverter/an97055.pdf}.
+\bibitem{ftdi}
+	KiCad library entry for USBtoSerial component FT232RL by \emph{jbaker0428}, Oct 3, 2010
+	\url{https://github.com/jbaker0428/Kicad-Libraries/blob/master/library/ftdi.lib}.
+\bibitem{overprotection}
+	Overvoltage and Reverce-voltage Protection in Automotive Systems,
+	Application note 760, \emph{Maxim integrated}, Apr 02, 2002, 
+	\url{https://www.maximintegrated.com/en/app-notes/index.mvp/id/760}.
+\bibitem{bqStudio}
+	Battery Management Studio (bqStudio) utility tool for TI Battery management products, \url{http://www.ti.com/tool/bqstudio}.
+\bibitem{Tof_cover}
+	\gls{st}, Application note: AN4907, \emph{VL53L0X ranging module cover window guidelines},
+	\url{http://www.st.com/content/ccc/resource/technical/document/application_note/group0/9d/93/be/33/13/be/46/19/DM00326504/files/DM00326504.pdf/jcr:content/translations/en.DM00326504.pdf}
+\bibitem{kf eff}
+	Duygun, M., Kutlu, L. \& Sickles, R.C., Journal of Productivity Analysis, 2016, 46: 155, \url{https://doi.org/10.1007/s11123-016-0477-z}
+%%% NO LINK STUFF
+\bibitem{cccv}
+	Power Guy, \emph{Constant Current Constant voltage}, May 26, 2016, San Diego, USA,
+	\url{https://www.us.tdk-lambda.com/media/292143/tdk-lambda-blog-052616.pdf}.
+\bibitem{animal} 
+	D.L. Hall and J. Llinas, \emph{An introduction to multisensor data fusion}, 
+	Proceedings of the IEEE, 85(1):6 –23, jan 1997.
+\bibitem{boken} 
+	B.R. Grover H, Patrick, \emph{Introduction to random signals and applied Kalman filtering}, 1997. 
+\bibitem{SNAME} 
+	Society of Naval Architects and Marine Engineers (SNAME), \emph{Principles of Naval Architecture}, 1989, Vol. III, \emph{SNAME}. 
+\bibitem{nonlinear} 
+	Dr. Oliver Nelles, \texttt{nonlinear system identification}.
+\bibitem{non-linear}
+	Noureldin., Karamat T.B., Georgy J., 2013, \texttt{ Basic Navigational Mathematics, Reference Frames and the Earth’s Geometry. In: Fundamentals of Inertial Navigation, Satellite-based 	Positioning and their Integration}, Springer, Berlin, Heidelberg.
+\bibitem{animal}
+	D.L. Hall and J. Llinas. \emph{An introduction to multisensor data fusion}, Proceedings of the. IEEE, 85(1):6 –23, jan 1997.
+\bibitem{signal_process}
+	Henry Stark, John W Woods, \emph{Probability and Random Processes with Applications to Signal Processing}, 4/E 2012,
+	 Pearson Higher Education.
+\bibitem{Discrete_kalman}
+	Donald E. Catlin, \emph{Estimation, Control, and the Discrete Kalman Filter}, 1989.
+\bibitem{book}
+	Weicker, P., \emph{A Systems Approach to Lithium-ion Battery Management}, Boston, Artech House, 2014.
 \end{thebibliography}
