Just up to date commit

--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -4,7 +4,9 @@
 % - "While slipping across the waves... " This is just a weird sentence, but I can't put my finger on it
 %   Put paragraph-break before this sentence?
 % - "compact, portable and simple" OR "compact, portable, simple"
-The art of sailing has been around for millennia. For much of human history it has been an absolutely vital part of civilization, providing efficient means of transporting goods all around the world. Today sailing has become a leisure activity enjoyed by millions of people around the world. Modern sailboats come in a large span of sizes, from large ships with crews of dozens down to small single-man dinghies. While slipping across the waves out at sea with only the wind to drive you is a calming experience, it is not a simple thing to do. When you are alone on the water, you have to be in control of the tension of the sail, the attitude of the boat, the forces on the centerboard and more while deciding how to respond to all of these. The goal of Project \emph{SailorAid} is to offload the decision-making from the sailor onto a compact, portable and simple system that will analyze these parameters and provide clear directions to the \gls{skipper}. 
+The art of sailing has been around for millennia. For much of human history it has been an absolutely vital part of civilization, providing efficient means of transporting goods all around the world. Today sailing has become a leisure activity enjoyed by millions of people around the world. Modern sailboats come in a large span of sizes, from large ships with crews of dozens down to small single-man dinghies.
+
+While slipping across the waves out at sea with only the wind to drive you is a calming experience, it is not a simple thing to do. When you are alone on the water, you have to be in control of the tension of the sail, the attitude of the boat, the forces on the centerboard and more while deciding how to respond to all of these. The goal of Project \emph{SailorAid} is to offload the decision-making from the sailor onto a compact, portable and simple system that will analyze these parameters and provide clear directions to the \gls{skipper}. 
 
 % - Put this section after Physics of Sailing to give context to the goals?
 % - Have goals in it's own subsection or incorperate into introduction? Or move it into Product Application?
